[gd_scene load_steps=4 format=3 uid="uid://bf0ji4vayvdal"]

[ext_resource type="Script" uid="uid://c5v85doxi2258" path="res://scenes/menu/versus_splash.gd" id="1_nqrdh"]

[sub_resource type="Gradient" id="Gradient_dq67u"]
colors = PackedColorArray(0.279825, 0, 0.0278985, 1, 4.33177e-07, 0.274201, 0.395359, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_io7hu"]
gradient = SubResource("Gradient_dq67u")
fill_to = Vector2(1, 1)

[node name="VersusSplash" type="Node2D"]
script = ExtResource("1_nqrdh")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("GradientTexture2D_io7hu")

[node name="MeNameBox" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -697.0
offset_top = 20.0
offset_bottom = 209.0
grow_horizontal = 0

[node name="MeDeckHbox" type="HBoxContainer" parent="MeNameBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MyDeckLabel" type="Label" parent="MeNameBox/MeDeckHbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "SOL BADGUY"

[node name="MePortrait" type="TextureRect" parent="MeNameBox/MeDeckHbox"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
expand_mode = 1

[node name="MyNameLabel" type="Label" parent="MeNameBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAYER NAME IS "

[node name="VSLabel" type="Label" parent="."]
offset_left = 590.0
offset_top = 300.0
offset_right = 697.0
offset_bottom = 419.0
theme_override_font_sizes/font_size = 90
text = "VS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YouNameBox" type="VBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 440.0
offset_top = 460.0
offset_right = 1242.0
offset_bottom = 669.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="YouDeckHbox" type="HBoxContainer" parent="YouNameBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="YouDeckLabel" type="Label" parent="YouNameBox/YouDeckHbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Litchi Faye Ling"
horizontal_alignment = 2

[node name="YouPortrait" type="TextureRect" parent="YouNameBox/YouDeckHbox"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
expand_mode = 1

[node name="YouNameLabel" type="Label" parent="YouNameBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAYER NAME VERY"
horizontal_alignment = 2
